# SnowFall

./: .gitignore  .gitmodules  Build.bat  BuildDep.bat  CMakeLists.txt  ConvertSounds.bat  Deploy.bat  README.md  Setup.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: checklist.yml
base/: DoomConfig.cfg  autoexec.cfg
base/guis/: hud.gui  mainmenu.gui  mphud.gui  mpmain.gui  netmenu.gui  scoreboard.gui  takenotes2.gui
base/guis/admin/: admincontrol.gui  admincontrol2.gui  adminlock.gui  comm1.gui  comm3.gui  commstation.gui  data1.gui  data2.gui  data3.gui  data4.gui  hell.gui  hell2.gui  office.gui
base/guis/alphalabs1/: gasline.gui  opengate.gui  security.gui  securitystation.gui
base/guis/alphalabs2/: ladder.gui  venthatch.gui
base/guis/alphalabs3/: liftcall.gui  vent.gui  vent2.gui
base/guis/alphalabs4/: efr.gui  efr2.gui  efr_start.gui  fragchamber.gui  locker.gui
base/guis/cameras/: alphalabs2_camcontrol.gui  alphalabs2_camera.gui  cam_on.gui  cam_static.gui  camera2.gui  (+1 more)
base/script/: ai_monster_demon_vulgar.script  ai_player.script  doom_defs.script  doom_events.script  doom_main.script  weapon_bfg.script  weapon_chaingun.script  weapon_chainsaw.script  weapon_fists.script  weapon_flashlight.script  weapon_handgrenade.script  weapon_machinegun.script  weapon_pistol.script  weapon_plasmagun.script  weapon_rocketlauncher.script  weapon_shotgun.script
docs/: BuildGuide.md  ConsoleCommands.md  GettingStarted.md
doomclassic/timidity/: instrum.cpp  readmidi.cpp  sdl_c.cpp  timidity.vcxproj
neo/: _PCLibs.props  doom3.sln  doomexe.vcxproj  external.vcxproj  game-d3xp.vcxproj  idlib.vcxproj
neo/Debug/: timidity.idb
neo/amplitude/: amplitude.vcxproj
neo/d3xp/: Achievements.cpp  Game_local.h  Mover.h  PlayerView.cpp  Trigger.cpp  Trigger.h
neo/framework/: Common.h  Console.h  DeclManager.cpp  FileSystem.cpp  TokenParser.cpp
neo/idlib/: Lexer.cpp  Lexer.h  Lib.cpp  Parser.h  Str.h
neo/renderer/: Image_files.cpp  Material.cpp  RenderSystem_init.cpp
neo/sound/: sound.h
neo/sys/: sys_local.h  sys_profile.h  sys_public.h
src/: _PCLibs.props  doom.sln  doom3.sln  doomdll.vcxproj  doomdll.vcxproj.filters  doomexe.vcxproj  doomexe.vcxproj.filters  external.vcxproj  external.vcxproj.filters  game-d3xp.vcxproj  game-d3xp.vcxproj.filters  game.vcxproj  idlib.vcxproj
src/MayaImport/: exporter.h  maya_main.cpp  maya_main.h
src/aas/: AASFile.cpp
src/amplitude/: amplitude.vcxproj
src/cm/: CollisionModel.h  CollisionModel_contacts.cpp  CollisionModel_contents.cpp  CollisionModel_debug.cpp  CollisionModel_files.cpp  CollisionModel_load.cpp  CollisionModel_local.h  CollisionModel_rotate.cpp  CollisionModel_trace.cpp  CollisionModel_translate.cpp
src/curl/: CHANGES  README  RELEASE-NOTES
src/d3xp/: Achievements.cpp  PlayerView.cpp
src/framework/: BuildDefines.h  BuildVersion.h  CVarSystem.cpp  CVarSystem.h  CmdSystem.cpp  CmdSystem.h  Common.cpp  Common.h  Common_dialog.cpp  Common_dialog.h  Common_load.cpp  Common_local.h  Common_menu.cpp  Common_network.cpp  Compressor.cpp  Compressor.h  Console.cpp  Console.h  DeclAF.cpp  DeclAF.h  DeclEntityDef.cpp  DeclEntityDef.h  DeclFX.cpp  DeclFX.h  DeclManager.cpp  DeclManager.h  DeclPDA.cpp  DeclPDA.h  DeclParticle.cpp  DeclParticle.h  DeclSkin.cpp  DeclSkin.h  DeclTable.cpp  DeclTable.h  DemoChecksum.h  DemoFile.cpp  DemoFile.h  EditField.cpp  EditField.h  EventLoop.cpp  (+21 more)
src/game/: AF.cpp  AF.h  AFEntity.cpp  AFEntity.h  Actor.cpp  Actor.h  BrittleFracture.cpp  BrittleFracture.h  Camera.cpp  Camera.h  Entity.cpp  Entity.h  Fx.cpp  Fx.h  Game.h  GameEdit.cpp  GameEdit.h  Game_local.cpp  Game_local.h  Game_network.cpp  Grabber.cpp  IK.cpp  IK.h  Item.cpp  Item.h  Light.cpp  Light.h  Misc.cpp  Misc.h  Moveable.cpp  Moveable.h  Mover.cpp  Mover.h  MultiplayerGame.cpp  MultiplayerGame.h  Player.cpp  Player.h  PlayerIcon.cpp  PlayerIcon.h  PlayerView.cpp  (+19 more)
src/idlib/: Base64.h  BitMsg.cpp  BitMsg.h  CmdArgs.cpp  CmdArgs.h  Dict.cpp  Dict.h  Heap.cpp  Heap.h  LangDict.cpp  LangDict.h  Lexer.cpp  Lexer.h  Lib.cpp  Lib.h  MapFile.cpp  MapFile.h  Parser.cpp  Parser.h  Str.cpp  Str.h  Timer.cpp  Timer.h  Token.cpp  Token.h  precompiled.h
src/renderer/: BufferObject.cpp  BufferObject.h  Cinematic.cpp  Cinematic.h  GuiModel.cpp  GuiModel.h  Image.h  Image_files.cpp  Image_init.cpp  Image_load.cpp  Image_process.cpp  Image_program.cpp  Interaction.cpp  Interaction.h  Material.cpp  Material.h  MegaTexture.cpp  MegaTexture.h  Model.cpp  Model.h  ModelDecal.cpp  ModelDecal.h  ModelManager.cpp  ModelManager.h  ModelOverlay.cpp  ModelOverlay.h  Model_ase.cpp  Model_ase.h  Model_beam.cpp  Model_liquid.cpp  Model_local.h  Model_lwo.cpp  Model_lwo.h  Model_ma.cpp  Model_ma.h  Model_md3.cpp  Model_md3.h  Model_md5.cpp  Model_prt.cpp  Model_sprite.cpp  (+51 more)
src/sfRenderer/: Renderer.cpp  Renderer.h  Window.cpp  Window.h
src/sfUI/: GuiManager.cpp  GuiManager.h
src/sound/: SoundVoice.cpp  SoundVoice.h  WaveFile.cpp  snd_cache.cpp  snd_decoder.cpp  snd_efxfile.cpp  snd_emitter.cpp  snd_local.h  snd_shader.cpp  snd_system.cpp  snd_wavefile.cpp  snd_world.cpp  sound.h
src/swf/: SWF_Image.cpp  SWF_Zlib.cpp
src/sys/: Snapshot_Jobs.cpp  sys_lobby.cpp  sys_lobby.h  sys_lobby_migrate.cpp  sys_local.cpp  sys_local.h  sys_profile.cpp  sys_public.h  sys_savegame.cpp  sys_session_callbacks.cpp  sys_session_local.cpp  sys_session_local.h  sys_session_savegames.cpp
src/ui/: BindWindow.cpp  BindWindow.h  ChoiceWindow.cpp  ChoiceWindow.h  DeviceContext.cpp  DeviceContext.h  EditWindow.cpp  EditWindow.h  FieldWindow.cpp  FieldWindow.h  GameBearShootWindow.cpp  GameBearShootWindow.h  GameBustOutWindow.cpp  GameBustOutWindow.h  GameSSDWindow.cpp  GameSSDWindow.h  GameWindow.cpp  GameWindow.h  GuiManager.cpp  GuiManager.h  GuiScript.cpp  GuiScript.h  ListGUI.cpp  ListGUI.h  ListGUILocal.h  ListWindow.cpp  ListWindow.h  MarkerWindow.cpp  MarkerWindow.h  Rectangle.h  RegExp.cpp  RegExp.h  RegExp_old.h  RenderWindow.cpp  RenderWindow.h  SimpleWindow.cpp  SimpleWindow.h  SliderWindow.cpp  SliderWindow.h  UserInterface.cpp  (+6 more)
(+1380 files in other folders)
